bin_PROGRAMS = udptun

udptun_SOURCES = udptun.c sock.c cli.c serv.c tunalloc.c icmp.c peer.c state.c destruct.c thread.c debug.h udptun.h sock.h cli.h serv.h tunalloc.h icmp.h peer.h state.h destruct.h thread.h
udptun_CFLAGS = ${GLIB_CFLAGS} \
                ${GLIB2_CFLAGS}
udptun_LDFLAGS = ${GLIB_LIBS} \
                ${GLIB2_LIBS}
