bin_PROGRAMS = copycat

copycat_SOURCES = udptun.c sock.c cli.c serv.c tunalloc.c icmp.c peer.c state.c destruct.c thread.c net.c xpcap.c debug.h udptun.h sock.h cli.h serv.h tunalloc.h icmp.h peer.h state.h destruct.h sysconfig.h thread.h net.h xpcap.h
copycat_CFLAGS = ${GLIB_CFLAGS} \
                ${GLIB2_CFLAGS} 
copycat_LDFLAGS = ${GLIB_LIBS} \
                ${GLIB2_LIBS} 
